// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights { correctly 1`] = `
<span class="token punctuation">
  {
</span>
<span class="token property-query">
  orders
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  id
</span>
<span class="token punctuation">
  :
</span>
<span class="token number">
  4
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token object">
  edges
</span>
<span class="token punctuation">
  {
</span>
<span class="token object">
  node
</span>
<span class="token punctuation">
  {
</span>
<span class="token comment">
  # Order fields
</span>
<span class="token comment">
  # Query fields
</span>
<span class="token punctuation">
  }
</span>
<span class="token property">
  cursor
</span>
<span class="token punctuation">
  }
</span>
<span class="token object">
  pageInfo
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  hasNextPage
</span>
<span class="token property">
  hasPreviousPage
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights input OrderInput { correctly 1`] = `
<span class="token keyword keyword-input">
  input
</span>
<span class="token atom-input class-name">
  OrderInput
</span>
<span class="token punctuation">
  {
</span>
<span class="token attr-name">
  id
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  ID
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  customAttributes
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name atom-input">
  AttributeInput
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  customer
</span>
<span class="token punctuation">
  :
</span>
<span class="token class-name">
  Customer
</span>
<span class="token attr-name">
  localizationExtensions
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name atom-input">
  LocalizationExtensionInput
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  metafields
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name atom-input">
  MetafieldInput
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  note
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  String
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  shippingAddress
</span>
<span class="token punctuation">
  :
</span>
<span class="token class-name atom-input">
  MailingAddressInput
</span>
<span class="token attr-name">
  tags
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token scalar">
  String
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  ]
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights mutation { correctly 1`] = `
<span class="token keyword keyword-mutation">
  mutation
</span>
<span class="token punctuation">
  {
</span>
<span class="token property-mutation">
  customerCreate
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  input
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  {
</span>
<span class="token attr-name">
  firstName
</span>
<span class="token punctuation">
  :
</span>
<span class="token string">
  "John"
</span>
<span class="token punctuation">
  ,
</span>
<span class="token attr-name">
  lastName
</span>
<span class="token punctuation">
  :
</span>
<span class="token string">
  "Tate"
</span>
<span class="token punctuation">
  ,
</span>
<span class="token attr-name">
  email
</span>
<span class="token punctuation">
  :
</span>
<span class="token string">
  "john@johns-apparel.com"
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token object">
  customer
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  id
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights mutation BookTrip($id:ID!) { correctly 1`] = `
<span class="token keyword keyword-mutation">
  mutation
</span>
<span class="token definition-mutation function">
  BookTrip
</span>
<span class="token punctuation">
  (
</span>
<span class="token variable variable-input">
  $id
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  ID
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property-query property-mutation">
  bookTrips
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  launchIds
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token variable variable-input">
  $id
</span>
<span class="token punctuation">
  ]
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  success
</span>
<span class="token property">
  message
</span>
<span class="token object">
  launches
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  id
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights mutation Login($email: String) { correctly 1`] = `
<span class="token keyword keyword-mutation">
  mutation
</span>
<span class="token definition-mutation function">
  Login
</span>
<span class="token punctuation">
  (
</span>
<span class="token variable variable-input">
  $email
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  String
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property-query property-mutation">
  login
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  email
</span>
<span class="token punctuation">
  :
</span>
<span class="token variable variable-input">
  $email
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights mutation orderUpdate($input: OrderInput!) { correctly 1`] = `
<span class="token keyword keyword-mutation">
  mutation
</span>
<span class="token definition-mutation function">
  orderUpdate
</span>
<span class="token punctuation">
  (
</span>
<span class="token variable variable-input">
  $input
</span>
<span class="token punctuation">
  :
</span>
<span class="token class-name atom-input">
  OrderInput
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property-query property-mutation">
  orderUpdate
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  input
</span>
<span class="token punctuation">
  :
</span>
<span class="token variable variable-input">
  $input
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token object">
  order
</span>
<span class="token punctuation">
  {
</span>
<span class="token comment">
  # Order fields
</span>
<span class="token punctuation">
  }
</span>
<span class="token object">
  userErrors
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  field
</span>
<span class="token property">
  message
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights query getProductById($id: ID!) { correctly 1`] = `
<span class="token keyword keyword-query">
  query
</span>
<span class="token definition-query function">
  getProductById
</span>
<span class="token punctuation">
  (
</span>
<span class="token variable">
  $id
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  ID
</span>
<span class="token operator">
  !
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property-query">
  product
</span>
<span class="token punctuation">
  (
</span>
<span class="token attr-name">
  id
</span>
<span class="token punctuation">
  :
</span>
<span class="token variable">
  $id
</span>
<span class="token punctuation">
  )
</span>
<span class="token punctuation">
  {
</span>
<span class="token property">
  title
</span>
<span class="token property">
  handle
</span>
<span class="token property">
  createdAt
</span>
<span class="token punctuation">
  }
</span>
<span class="token punctuation">
  }
</span>
`;

exports[`prism-graphql E2E tests - graphql+highlight-keywords #highlights type Human implements Character { correctly 1`] = `
<span class="token keyword keyword-type">
  type
</span>
<span class="token class-name">
  Human
</span>
<span class="token keyword keyword-implements">
  implements
</span>
<span class="token class-name">
  Character
</span>
<span class="token punctuation">
  {
</span>
<span class="token attr-name">
  id
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  ID
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  name
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  String
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  friends
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name">
  Character
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  appearsIn
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name">
  Episode
</span>
<span class="token punctuation">
  ]
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  starships
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name">
  Starship
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  totalCredits
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  Int
</span>
<span class="token punctuation">
  }
</span>
<span class="token keyword keyword-type">
  type
</span>
<span class="token class-name">
  Droid
</span>
<span class="token keyword keyword-implements">
  implements
</span>
<span class="token class-name">
  Character
</span>
<span class="token punctuation">
  {
</span>
<span class="token attr-name">
  id
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  ID
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  name
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  String
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  friends
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name">
  Character
</span>
<span class="token punctuation">
  ]
</span>
<span class="token attr-name">
  appearsIn
</span>
<span class="token punctuation">
  :
</span>
<span class="token punctuation">
  [
</span>
<span class="token class-name">
  Episode
</span>
<span class="token punctuation">
  ]
</span>
<span class="token operator">
  !
</span>
<span class="token attr-name">
  primaryFunction
</span>
<span class="token punctuation">
  :
</span>
<span class="token scalar">
  String
</span>
<span class="token punctuation">
  }
</span>
`;
